<resources>
    <string name="app_name">Farhaan Apps</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="home_walkthrough">HOME</string>
    <string name="text_home_walktrough">Tampilan Home ini menampilkan beberapa kesukaan saya dan deskripsi tentang saya</string>
    <string name="jadwal_walkthrough">JADWAL</string>
    <string name="text_jadwal_walkthrough">Tampilan Jadwal ini menampilkan agenda kegiatan yang saya lakukan setiap hari</string>
    <string name="profile_walkthrough">PROFILE</string>
    <string name="text_profile_walkthrough">Tampilan Profil ini menampilkan deskripsi tentang saya dan juga kontak maupun media sosial yang saya gunakan</string>
    <string name="title_media">Media Player</string>
    <string name="visita"></string>
    <string name="dialog_apps">Farhaan Apps</string>
    <string name="dialog_version">Version 1.0</string>
    <string name="dialog_deskripsi">Farhaan Apps adalah aplikasi yang berisi tentang SAYA. Aplikasi ini masih sangan simpel dan baru memiliki versi 1.0</string>
    <string name="detail_daily">Detail Daily</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="friend_list">Friend List</string>
    <string name="friendlist_teman">Teman</string>
    <string name="friendlist_daftar">Friend List</string>
    <string name="home">Home</string>
    <string name="nama_profil">MUHAMMAD FARHAAN</string>
    <string name="unikom">UNIKOM</string>
    <string name="umur_home">20 Tahun</string>
    <string name="jeniskelamin_home">Laki-Laki</string>
    <string name="bandung1">Bandung</string>
    <string name="bandung2">Bandung</string>
    <string name="interest">Interest</string>
    <string name="hobby">HOBBY</string>
    <string name="bermain_game1">Bermain Game</string>
    <string name="bermain_game2">Bermain Game</string>
    <string name="makes">MAKES</string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="mikes">MIKES</string>
    <string name="air_mineral">Air Mineral</string>
    <string name="interest_card">INTEREST</string>
    <string name="bermain_game">Bermain Game</string>
    <string name="cita_cita">CITA-CITA</string>
    <string name="orang_sukses">Orang Sukses</string>
    <string name="daily">Daily</string>
    <string name="daily_list">Daily List</string>
    <string name="media_music">Music</string>
    <string name="media_video">Video</string>
    <string name="umur_profil">Umur</string>
    <string name="umur_saya_profil">20 Tahun</string>
    <string name="jeniskelamin_profil">Jenis Kelamin</string>
    <string name="laki_laki_profil">Laki-Laki</string>
    <string name="kota_profil">Kota</string>
    <string name="bandung">Bandung</string>
    <string name="about_profil">About</string>
    <string name="kegiatan_daily">GAME</string>
    <string name="waktu_daily">10.00</string>
    <string name="deskripsi_daily">Deskripsi</string>
    <string name="nama_teman">MAKES</string>
    <string name="umur_teman">Ayam Goreng</string>
    <string name="nama_picture">Nama Gallery</string>
    <string name="dummy_song">Dummy Song</string>
    <string name="judul_video">Judul Video</string>
</resources>
